--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/ico" href="/images/icons/favicon.ico"/>
     <meta name="content" content="Découvrez l'univers de Maurine Cros, étudiante en DUT MMI à l'IUT Bordeaux Montaigne, Aquitaine, 33000">
-    <title>Maurine Cros | Acceuil</title>
+    <title>Maurine Cros | Accueil</title>
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
