mise à jour responsive

--- a/html/htmldessin/dessin.html
+++ b/html/htmldessin/dessin.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<HEAD>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/ico" href="images/icons/favicon.ico"/>
-    <meta name="content" content="Découvrez l'univers de Maurine Cros, étudiante en DUT MMI à l'IUT Bordeaux Montaigne, Aquitaine, 33000">
-    <title>Maurine Cros | Acceuil</title>
+    <HEAD>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/ico" href="/images/icons/favicon.ico"/>
+        <meta name="content" content="Découvrez l'univers de Maurine Cros, étudiante en DUT MMI à l'IUT Bordeaux Montaigne, Aquitaine, 33000">
+        <title>Maurine Cros | Dessin</title>
+    
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet">
+        <!--linker stylesheet-->
+        <link rel="stylesheet" type="text/css" href="/stylesheet/css_home.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheet/css_a_propos.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheet/css_graphisme.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheet/graphisme/s1graphisme_logoM.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheet/webdesign/webdesign.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheet/photographie.css">
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheet/css_home.css">
-</HEAD>
-
-<body>
-    <p class="test">page dessin</p>
-</body>
-
-</html>
+    </HEAD>
+    <body>
+        <balise id="hautdepage"></balise>
+        <header>
+            <nav>
+                <ul>
+                    <li class="menu"><a href="/index.html" >ACCUEIL</a></li>
+                    <li class="menu"><a href="/apropos.html" >À PROPOS</a></li>
+                    <li class="menu"><a href="/html/htmlgraphisme/graphisme.html" >GRAPHISME</a></li>
+                    <li class="menu"><a href="/html/htmlwebdesign/webdesign.html" >WEB DESIGN</a></li>
+                    <li class="menu"><a href="/html/htmldessin/dessin.html" >DESSIN</a></li>
+                    <li class="menu"><a href="/html/htmlphotographie/photographie.html" >PHOTOGRAPHIE</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h2 class="no_padding align title">Dessins</h2>
+        <p class="bloc_pres title">
+            Le dessin est une passion chez moi depuis petite.<br>
+            Du croquis crayonné à l'aquarelle en passant par le dessin à la tablette graphique, je m'amuse et tente de m'améliorer chaque jour.<br>
+            L'usage de la tablette graphique me permet d'améliorer mes graphismes et me sert dans mes études au quotidien.<br>
+            J'expose ici certaines de mes créations, afin de montrer l'étendue de mes capacités.
+        </p>
+        <footer>
+            <div class="align">
+                <a href="#hautdepage" ><img class="arrow" src="/images/icons/up-arrow.svg"></a>
+                <br>
+                <a class="mail_f" href="#hautdepage">HAUT DE PAGE</a>
+            </div>
+            <div class="flex dim_pres">
+                <div class="flex dim_rsx">
+                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
+                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
+                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
+                    <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
+                </div>
+                <div class="cv_mail flex">
+                    <a class="mail_f" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">Téléchargez mon CV</a>
+                    <a class="mail_f" href="mailto:maurine.cros@gmail.com?subject=Contact" title="">maurine.cros@gmail.com</a>
+                </div>
+            </div>
+        </footer>
+    </body>
