--- a/html/htmlgraphisme/2groupeM.html
+++ b/html/htmlgraphisme/2groupeM.html
@@ -17,12 +17,25 @@
         <link rel="stylesheet" type="text/css" href="/stylesheet/css_a_propos.css">
         <link rel="stylesheet" type="text/css" href="/stylesheet/css_graphisme.css">
         <link rel="stylesheet" type="text/css" href="/stylesheet/graphisme/s1graphisme_logoM.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheet/webdesign/webdesign.css">
 
     </HEAD>
 
     <body>
         <balise id="hautdepage"></balise>
-        <a href="graphisme.html"><img class="exit" src="/images/icons/exit_b.svg" alt="quitter"> </a>
+        <header>
+            <nav>
+                <ul>
+                    <li class="menu"><a href="/index.html" >ACCUEIL</a></li>
+                    <li class="menu"><a href="/apropos.html" >À PROPOS</a></li>
+                    <li class="menu"><a href="/html/htmlgraphisme/graphisme.html" >GRAPHISME</a></li>
+                    <li class="menu"><a href="/html/htmlwebdesign/webdesign.html" >WEB DESIGN</a></li>
+                    <li class="menu"><a href="/html/htmldessin/dessin.html" >DESSIN</a></li>
+                    <li class="menu"><a href="/html/htmlphotographie/photographie.html" >PHOTOGRAPHIE</a></li>
+                </ul>
+            </nav>
+        </header>
+        <a class="title mail" href="graphisme.html" >Revenir au graphisme</a>
         <h2 class="title">Création d'un logo</h2>
         <div class="bloc_pres title">
             <p>
@@ -38,14 +51,16 @@
         <p class="made_w">Fait avec les Logiciel <a class="mail">Photoshop</a> et <a class="mail">Illustrator</a>.</p>
         <footer>
             <div class="align">
-                <a class=w_color href="#hautdepage">HAUT DE PAGE</a>
+                <a href="#hautdepage" ><img class="arrow" src="/images/icons/up-arrow.svg"></a>
+                <br>
+                <a class="mail_f" href="#hautdepage">HAUT DE PAGE</a>
             </div>
             <div class="flex dim_pres">
                 <div class="flex dim_rsx">
-                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_w.png" alt="Mon compte vinted"></a>
-                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_w.svg" alt="Ma chaîne YouTube"></a>
-                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_w.svg" alt="Mon linkedin"></a>
-                    <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_w.svg" alt="Mon Pinterest, Mes photographies"></a>   
+                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
+                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
+                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
+                    <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
                 </div>
                 <div class="cv_mail flex">
                     <a class="mail_f" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">Téléchargez mon CV</a>
