--- a/html/htmlwebdesign/webdesign.html
+++ b/html/htmlwebdesign/webdesign.html
@@ -42,14 +42,16 @@
         </div>
         <footer>
             <div class="align">
-                <a class=w_color href="#hautdepage">HAUT DE PAGE</a>
+                <a href="#hautdepage" ><img class="arrow" src="/images/icons/up-arrow.svg"></a>
+                <br>
+                <a class="mail_f" href="#hautdepage">HAUT DE PAGE</a>
             </div>
             <div class="flex dim_pres">
                 <div class="flex dim_rsx">
-                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_w.png" alt="Mon compte vinted"></a>
-                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_w.svg" alt="Ma chaîne YouTube"></a>
-                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_w.svg" alt="Mon linkedin"></a>
-                    <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_w.svg" alt="Mon Pinterest, Mes photographies"></a>   
+                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
+                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
+                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
+                    <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
                 </div>
                 <div class="cv_mail flex">
                     <a class="mail_f" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">Téléchargez mon CV</a>
