--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet">
     <!--linker stylesheet-->
     <link rel="stylesheet" type="text/css" href="/stylesheet/css_home.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet/css_a_propos.css">
+
 </HEAD>
 
 <body>
@@ -30,7 +32,23 @@
         </nav>
     </header>
     <img class="logo_home" src="/images/icons/logo_home.svg" >
-    <div class="flex">
+    <footer>
+        <div class="align">
+        </div>
+        <div class="flex dim_pres">
+            <div class="flex dim_rsx">
+                <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
+                <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
+                <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
+                <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
+            </div>
+            <div class="cv_mail flex">
+                <a class="mail_f" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">Téléchargez mon CV</a>
+                <a class="mail_f" href="mailto:maurine.cros@gmail.com?subject=Contact" title="">maurine.cros@gmail.com</a>
+            </div>
+        </div>
+    </footer>
+    <!--<div class="flex">
         <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
         <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
         <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
