--- a/html/htmlwebdesign/2BC.html
+++ b/html/htmlwebdesign/2BC.html
@@ -71,6 +71,8 @@
                     <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
                     <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
                     <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
+                    <a href="https://www.behance.net/maurinecros"><img class="rsx_f" src="/images/icons/behance.svg" alt="Mon Behance"> </a>
+                    
                     <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
                 </div>
                 <div class="cv_mail flex">
