--- a/html/htmldessin/dessin.html
+++ b/html/htmldessin/dessin.html
@@ -35,13 +35,8 @@
                 </ul>
             </nav>
         </header>
-        <h2 class="no_padding align title">Dessins</h2>
-        <p class="bloc_pres title">
-            Le dessin est une passion chez moi depuis petite.<br>
-            Du croquis crayonné à l'aquarelle en passant par le dessin à la tablette graphique, je m'amuse et tente de m'améliorer chaque jour.<br>
-            L'usage de la tablette graphique me permet d'améliorer mes graphismes et me sert dans mes études au quotidien.<br>
-            J'expose ici certaines de mes créations, afin de montrer l'étendue de mes capacités.
-        </p>
+        <h2 class="no_padding align title">Mes planches de dessin disponibles sur Behance !</h2>
+        <a href="https://www.behance.net/maurinecros"><img class="padding_top logo_home" src="/images/dessin/behance_dessin.svg"></a>
         <footer>
             <div class="align">
                 <a href="#hautdepage" ><img class="arrow" src="/images/icons/up-arrow.svg"></a>
@@ -53,6 +48,7 @@
                     <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
                     <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
                     <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
+                    <a href="https://www.behance.net/maurinecros"><img class="rsx_f" src="/images/icons/behance.svg" alt="Mon Behance"> </a>
                     <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
                 </div>
                 <div class="cv_mail flex">
