--- a/html/htmlgraphisme/graphisme.html
+++ b/html/htmlgraphisme/graphisme.html
@@ -36,9 +36,15 @@
         </header>
         <h2 class="title">Graphisme</h2>
         <div class="grille">
-            <a href="/html/htmlgraphisme/3covers.html"><img class="grid_item dim_ppgraphisme" src="/images/graphisme/cover/trippiered.jpg" alt="Logo Groupe M Insa Toulouse"></a>
-            <a href="/html/htmlgraphisme/2groupeM.html"><img class="grid_item dim_ppgraphisme" src="/images/graphisme/groupeM/pp_groupeM.svg" alt="Logo Groupe M Insa Toulouse"></a>
-            <a href="/html/htmlgraphisme/1hypnose.html"><img class="grid_item dim_ppgraphisme" src="/images/graphisme/hypnose/pp_hypnose.svg" alt="Branding Hypnothérapeute"></a>
+            <div class="img-wrapper">
+                <a href="/html/htmlgraphisme/3covers.html"><img class="grid_item dim_ppgraphisme inner-img img-test" src="/images/graphisme/cover/trippiered.jpg" alt="Covers d'album"></a>
+            </div>
+            <div class="img-wrapper">
+                <a href="/html/htmlgraphisme/2groupeM.html"><img class="grid_item dim_ppgraphisme inner-img img-test" src="/images/graphisme/groupeM/pp_groupeM.svg" alt="Logo Groupe M Insa Toulouse"></a>
+            </div>
+            <div class="img-wrapper">
+                <a href="/html/htmlgraphisme/1hypnose.html"><img class="grid_item dim_ppgraphisme inner-img img-test" src="/images/graphisme/hypnose/pp_hypnose.svg" alt="Branding Hypnothérapeute"></a>
+            </div>
         </div>
         <footer>
             <div class="align">
