--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
             </ul>
         </nav>
     </header>
-    <img class="logo_home" src="/images/icons/logo_home.svg" >
+    <div class="container">
+        <div class="objEffect">
+            <img class="logo_home" src="/images/icons/logo_home.svg" >
+        </div>
+    </div>
+
     <footer>
         <div class="align">
         </div>
@@ -49,5 +54,6 @@
             </div>
         </div>
     </footer>
+    <script src="/js/homeffect.js"></script>
 </body>
 </html>
