--- a/html/htmlgraphisme/graphisme.html
+++ b/html/htmlgraphisme/graphisme.html
@@ -21,19 +21,8 @@
     </HEAD>
 
     <body>
-        <header>
-            <balise id="hautdepage"></balise>
-            <nav>
-                <ul>
-                <li class="menu"><a href="/index.html" >ACCUEIL</a></li>
-                <li class="menu"><a href="/apropos.html" >À PROPOS</a></li>
-                <li class="menu"><a href="/html/htmlgraphisme/graphisme.html" >GRAPHISME</a></li>
-                <li class="menu"><a href="/html/htmlwebdesign/webdesign.html" >WEB DESIGN</a></li>
-                <li class="menu"><a href="/html/htmldessin/dessin.html" >DESSIN</a></li>
-                <li class="menu"><a href="/html/htmlphotographie/photographie.html" >PHOTOGRAPHIE</a></li>
-                </ul>
-            </nav>
-        </header>
+        <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
+        <div class="espace"></div>
         <h2 class="title">Graphisme</h2>
         <div class="grille">
             <div class="img-wrapper">
@@ -46,27 +35,10 @@
                 <a href="/html/htmlgraphisme/1hypnose.html"><img class="grid_item dim_ppgraphisme inner-img img-test" src="/images/graphisme/hypnose/pp_hypnose.svg" alt="Branding Hypnothérapeute"></a>
             </div>
         </div>
-        <footer>
-            <div class="align">
-                <a href="#hautdepage" ><img class="arrow" src="/images/icons/up-arrow.svg"></a>
-                <br>
-                <a class="mail_f" href="#hautdepage">HAUT DE PAGE</a>
-            </div>
-            <div class="flex dim_pres">
-                <div class="flex dim_rsx">
-                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
-                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
-                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
-                    <a href="https://www.behance.net/maurinecros"><img class="rsx_f" src="/images/icons/behance.svg" alt="Mon Behance"> </a>
-                    
-                    <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
-                </div>
-                <div class="cv_mail flex">
-                    <a class="mail_f" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">Téléchargez mon CV</a>
-                    <a class="mail_f" href="mailto:maurine.cros@gmail.com?subject=Contact" title="">maurine.cros@gmail.com</a>
-                </div>
-            </div>
-        </footer>
+        <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
+
+        <script src="/js/header.js"></script>
+    
     </body>
 
 </html>
