--- a/index.html
+++ b/index.html
@@ -19,41 +19,16 @@
 </HEAD>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li class="menu"><a href="/index.html" >ACCUEIL</a></li>
-                <li class="menu"><a href="/apropos.html" >À PROPOS</a></li>
-                <li class="menu"><a href="/html/htmlgraphisme/graphisme.html" >GRAPHISME</a></li>
-                <li class="menu"><a href="/html/htmlwebdesign/webdesign.html" >WEB DESIGN</a></li>
-                <li class="menu"><a href="/html/htmldessin/dessin.html" >DESSIN</a></li>
-                <li class="menu"><a href="/html/htmlphotographie/photographie.html" >PHOTOGRAPHIE</a></li>
-            </ul>
-        </nav>
-    </header>
+    <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
+    <div class="espace"></div>
+<!-- maurine il faut mettre cette ligne de code ci dessus -->
     <div class="container">
         <div class="objEffect">
             <img class="logo_home" src="/images/icons/logo_home.svg" >
         </div>
     </div>
-
-    <footer>
-        <div class="align">
-        </div>
-        <div class="flex dim_pres">
-            <div class="flex dim_rsx">
-                <a href="https://www.vinted.fr/membres/11565590-maurilonus" > <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
-                <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" > <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
-                <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" > <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
-                <a href="https://www.behance.net/maurinecros"><img class="rsx_f" src="/images/icons/behance.svg" alt="Mon Behance"> </a>
-                <a href="https://www.pinterest.fr/maurinecros/" > <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
-            </div>
-            <div class="cv_mail flex">
-                <a class="mail_f" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">Téléchargez mon CV</a>
-                <a class="mail_f" href="mailto:maurine.cros@gmail.com?subject=Contact" title="">maurine.cros@gmail.com</a>
-            </div>
-        </div>
-    </footer>
     <script src="/js/homeffect.js"></script>
+    <script src="/js/header.js"></script>
+    <!-- maurine il faut aussi mettre cette ligne de code -->
 </body>
 </html>
