effets js, galerie photo et +

--- a/html/htmldessin/dessin.html
+++ b/html/htmldessin/dessin.html
@@ -19,14 +19,15 @@
         <link rel="stylesheet" type="text/css" href="/stylesheet/graphisme/s1graphisme_logoM.css">
         <link rel="stylesheet" type="text/css" href="/stylesheet/webdesign/webdesign.css">
         <link rel="stylesheet" type="text/css" href="/stylesheet/photographie.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheet/dessin/dessin.css">
 
     </HEAD>
     <body>
         <balise id="hautdepage"></balise>
         <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
+        <div class="espace"></div>
         <h2 class="no_padding align title">Mes planches de dessin disponibles sur Behance !</h2>
-        <a href="https://www.behance.net/maurinecros"><img class="padding_top logo_home" src="/images/dessin/behance_dessin.svg"></a>
-        <footer>
-            <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
-    <script src="/js/header.js"></script>
+        <a href="https://www.behance.net/maurinecros" target="_blank"><img class="padding_top logo_home" src="/images/dessin/behance_dessin.svg"></a>
+        <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
+        <script src="/js/header.js"></script>
     </body>
