--- a/html/htmlgraphisme/1hypnose.html
+++ b/html/htmlgraphisme/1hypnose.html
@@ -24,7 +24,6 @@
         <balise id="hautdepage"></balise>
         <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
         <div class="espace"></div>
-        <a class="title mail" href="graphisme.html" >Revenir au graphisme</a>
         <h2 class="title">Identité graphique</h2>
         <div class="bloc_pres title">
             <p>
@@ -35,7 +34,17 @@
         <img class="tshirt" src="/images/graphisme/hypnose/carte_hypnose.jpg" alt="Mockup T-shirt">
         <img class="lettre" src="/images/graphisme/hypnose/mockup_lettre.jpg" alt="Logos Groupe M" >
         <p class="made_w">Fait avec les Logiciel <a class="mail">Photoshop</a> et <a class="mail">Illustrator</a>.</p>
+        <div class="made_w2">
+            <div class="container2">
+            
+                <a href="/html/htmlgraphisme/graphisme.html" class="btn btn-1">
+                <svg>
+                    <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+                </svg>
+                Graphisme
+                </a>
+            </div>
+        </div>
         <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
-
     <script src="/js/header.js"></script>
     </body>
