--- a/html/htmlphotographie/photographie.html
+++ b/html/htmlphotographie/photographie.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <HEAD>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/ico" href="/images/icons/favicon.ico"/>
-        <meta name="content" content="Découvrez l'univers de Maurine Cros, étudiante en DUT MMI à l'IUT Bordeaux Montaigne, Aquitaine, 33000">
-        <title>Maurine Cros | Photographie</title>
-    
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet">
-        <!--linker stylesheet-->
-        <link rel="stylesheet" type="text/css" href="/stylesheet/css_home.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheet/css_a_propos.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheet/css_graphisme.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheet/graphisme/s1graphisme_logoM.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheet/webdesign/webdesign.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheet/photographie.css">
+<HEAD>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/ico" href="/images/icons/favicon.ico" />
+    <meta name="content"
+        content="Découvrez l'univers de Maurine Cros, étudiante en DUT MMI à l'IUT Bordeaux Montaigne, Aquitaine, 33000">
+    <title>Maurine Cros | Photographie</title>
 
-    </HEAD>
-    <body>
-        <balise id="hautdepage"></balise>
-        <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
-        <div class="espace"></div>
-        <h2 class="no_padding align title">Retrouvez toutes mes photographies sur ma page Pinterest</h2>
-        <a href="https://www.pinterest.fr/maurinecros"><img class="logo_home" src="/images/icons/pincode_w.png"></a>
-        <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <!--linker stylesheet-->
+    <link rel="stylesheet" type="text/css" href="/stylesheet/css_home.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet/css_a_propos.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet/css_graphisme.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet/graphisme/s1graphisme_logoM.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet/webdesign/webdesign.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet/photographie.css">
 
-        <script src="/js/header.js"></script>
-    </body>
+</HEAD>
+
+<body>
+    <balise id="hautdepage"></balise>
+    <iframe class="include fix" src="/html/header.html" id="navbar" seamless></iframe>
+    <div class="espace"></div>
+    <div class="espace"></div>
+    <div class="espace"></div>
+    <div class="espace"></div>
+    <div class="espace"></div>
+    <div class="espace"></div>
+    <h2 class="no_padding align title">Retrouvez toutes mes photographies sur ma page Pinterest</h2>
+    <div class="padding_top"></div>
+    <!-- <a href="https://www.pinterest.fr/maurinecros/photos/"target="_blank"><img class="padding_top logo_home" src="/images/icons/pinterest_photo.svg"></a>
+         -->
+    <main class="infinite-photo-grid"></main>
+    <div class="padding_top">
+        <div class="container2">
+            <a href="https://www.pinterest.fr/maurinecros/photos/" target="_blank" class="btn btn-1">
+                <svg>
+                    <rect x="0" y="0" fill="none" width="100%" height="100%" />
+                </svg>
+                En voir plus
+            </a>
+        </div>
+    </div>
+    <iframe class="include" src="/html/footer.html" id="navbar" seamless></iframe>
+    <script src="/js/galery.js"></script>
+    <script src="/js/header.js"></script>
+</body>
