--- a/html/htmlwebdesign/3classcode.html
+++ b/html/htmlwebdesign/3classcode.html
@@ -24,7 +24,6 @@
         <balise id="hautdepage"></balise>
         <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
         <div class="espace"></div>
-        <a class="title mail" href="/html/htmlwebdesign/webdesign.html" >Revenir au web design</a>
         <h2 class="title">Class Code</h2>
         <p class="bloc_pres title">
             Le projet Class Code est un projet de refonte d'un site web auquel j'ai eu l'occasion de participer.
@@ -54,6 +53,17 @@
             Codé avec l'interface <a class="mail">Visual Studio code</a>, utilisant les langages <a class="mail">Html</a>, <a class="mail">Css</a></a> et <a class="mail">Java Script</a>.<br>
             Le design a été fait sur <a class="mail">Figma</a>.
         </p>
+        <div class="made_w2">
+            <div class="container2">
+            
+                <a href="/html/htmlwebdesign/webdesign.html" class="btn btn-1">
+                <svg>
+                    <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+                </svg>
+                Web Design
+                </a>
+            </div>
+        </div>
         <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
 
     <script src="/js/header.js"></script>
