--- a/html/htmlwebdesign/4bgame.html
+++ b/html/htmlwebdesign/4bgame.html
@@ -28,7 +28,6 @@
     <balise id="hautdepage"></balise>
     <iframe class="include fix" src="/html/header.html" id="navbar" seamless></iframe>
     <div class="espace"></div>
-    <a class="title mail" href="/html/htmlwebdesign/webdesign.html">Revenir au web design</a>
     <h2 class="title">B.GAME, Beat the game</h2>
     <p class="bloc_pres title">
         B.Game est un blog créé lors de ma formation en DUT MMI.
@@ -36,31 +35,42 @@
         Je me suis occupée entièrement de l'identité graphique ainsi que de l'apparence du site : le logo, les couleurs, les typographies utilisées...
     </p>
     <div class="flex mascotte_phone">
-        <img  src="/images/webdesign/b.game/acteurclef.jpg.png" alt="Mockup Ordinateur">
-        <p>
-            Des articles autour du jeu vidéo, avec un design moderne et unique.<br>
-            Présentés d'une manière artistique mais laissant place au texte afin de permettre une lecture claire.
-        </p>
+        <img src="/images/webdesign/b.game/acteurclef.jpg.png" alt="Mockup Ordinateur">
     </div>
     <div class="black">
-        <img class="logo_M" src="/images/webdesign/b.game/newsletter.png" alt="exemple de titre">
-        <p class="padding_top made_w">
+        <img class="padding_top logo_M newsletter" src="/images/webdesign/b.game/newsletter.png" alt="exemple de titre">
+        <p class="padding_top padding_bottom newsletter">
             Des polices d'écriture et des titres stylisés pour chaque catégorie.<br>
             Cela permet au lecteur de ne pas s'ennuyer sur le blog et de 
             Toutes les modifications et les styles ont été faites par moi à l'aide du logiciel Illustrator.
         </p>
     </div>
-    <div class="flew mascotte_phone">
-        <p>
-            J'ai également designé les pages connexion et inscriptions, afin de permettre une expérience utilisateur des plus agréables.
-        </p>
+    <div class="flex mascotte_phone">
         <img class="dim_rb" src="/images/webdesign/b.game/bgame_pple.jpg">
+        <p class="t_right">
+            J'ai également designé les pages connexion et inscriptions, afin de permettre une expérience utilisateur des plus agréables.<br>
+            Les deux pages paraissent chaleureuses, et des messages d'invitation permettent une compréhension complète de la part du visiteur.<br>
+            Des articles autour du jeu vidéo, avec un design moderne et unique.<br>
+            Présentés d'une manière artistique mais laissant place au texte afin de permettre une lecture claire.
+        </p>
     </div>
+    <img class="tshirt" src="/images/webdesign/b.game/p_bgame2.jpg">
     <p class="made_w">
         Codé en utilisant les langages <a class="mail">Html</a>,
         <a class="mail">Css</a></a>, <a class="mail">Java Script</a> et <a class="mail">Php</a>.<br>
         Le design a été fait sur <a class="mail">Figma</a>.
     </p>
+    <div class="made_w2">
+        <div class="container2">
+        
+            <a href="/html/htmlwebdesign/webdesign.html" class="btn btn-1">
+            <svg>
+                <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+            </svg>
+            Web Design
+            </a>
+        </div>
+    </div>
     <iframe class="include" src="/html/footer.html" id="navbar" seamless></iframe>
 </body>
 <script src="/js/header.js"></script>
