--- a/html/htmlwebdesign/webdesign.html
+++ b/html/htmlwebdesign/webdesign.html
@@ -25,13 +25,16 @@
         <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
         <div class="espace"></div>
         <h2 class="title">Web Design</h2>
+
         <div class="grille">
                 <a href="/html/htmlwebdesign/3classcode.html"><img class="grid_item" src="/images/webdesign/classcode/pp_classcode.png" alt="Class' Code"></a>
+                <a href="/html/htmlwebdesign/4bgame.html"><img class="grid_item" src="/images/webdesign/b.game/pp_bgame.png" alt="Blog Art"></a>
                 <a href="/html/htmlwebdesign/2BC.html"><img class="grid_item" src="/images/webdesign/bearcooking/pp_bearcooking.png" alt="Bear Cooking"></a>
                 <a href="/html/htmlwebdesign/1festival.html"><img class="grid_item" src="/images/webdesign/festival/pp_festival.png" alt="Cinéma le festivalS"></a>
         </div>
+        
         <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
-
+    <script src="/js/scrolltotop.js"></script>
     <script src="/js/header.js"></script>
     </body>
 
