--- a/apropos.html
+++ b/apropos.html
@@ -39,12 +39,21 @@
             <p>
                 <a class="mail" href="mailto:maurine.cros@gmail.com?subject=Contact" title="">maurine.cros@gmail.com</a>
             </p>
-            <p> Téléchargez mon CV <a class="mail" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">ici</a> </p>
+            <!-- <p> Téléchargez mon CV <a class="mail" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">ici</a> </p> -->
+            <div class="container2">
+                <a href="/html/htmlwebdesign/webdesign.html" class="btn btn-1">
+                <svg>
+                    <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+                </svg>
+                Mon CV ici
+                </a>
+            </div>
         </div>
         <img class="logo" src="/images/icons/logo_maurine.svg" alt="Logo Maurine">
     </div>
     <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
     <script src="/js/header.js"></script>
+    <script src="/js/typewriter.js"></script>
 </body>
 
 </html>
