--- a/html/footer.html
+++ b/html/footer.html
@@ -17,11 +17,11 @@
             </div>
             <div class="flex dim_pres">
                 <div class="flex dim_rsx">
-                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" target="_parent"> <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
-                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" target="_parent"> <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
-                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" target="_parent"> <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
-                    <a href="https://www.behance.net/maurinecros" target="_parent"><img class="rsx_f" src="/images/icons/behance.svg" alt="Mon Behance"> </a>
-                    <a href="https://www.pinterest.fr/maurinecros/" target="_parent"> <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
+                    <a href="https://www.vinted.fr/membres/11565590-maurilonus" target="_parent blank"> <img class="rsx_f" src="/images/icons/vinted_b.png" alt="Mon compte vinted"></a>
+                    <a href="https://www.youtube.com/channel/UCyzHvBJ54VKKFKNWHj_m34g" target="_parent blank"> <img class="rsx_f" src="/images/icons/youtube_b.svg" alt="Ma chaîne YouTube"></a>
+                    <a href="https://www.linkedin.com/in/maurine-cros-233a411b2/" target="_parent blank"> <img class="rsx_f" src="/images/icons/linkedin_b.svg" alt="Mon linkedin"></a>
+                    <a href="https://www.behance.net/maurinecros" target="_parent blank"><img class="rsx_f" src="/images/icons/behance.svg" alt="Mon Behance"> </a>
+                    <a href="https://www.pinterest.fr/maurinecros/photos/" target="_parent blank"> <img class="rsx_f" src="/images/icons/pinterest_b.svg" alt="Mon Pinterest, Mes photographies"></a>   
                 </div>
                 <div class="cv_mail flex">
                     <a class="mail_f" href="CV_net.pdf " download="CV_Maurine_Cros.pdf" target="_parent">Téléchargez mon CV</a>
