--- a/html/htmlgraphisme/2groupeM.html
+++ b/html/htmlgraphisme/2groupeM.html
@@ -25,8 +25,6 @@
         <balise id="hautdepage"></balise>
         <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
         <div class="espace"></div>
-
-        <a class="title mail" href="graphisme.html" >Revenir au graphisme</a>
         <h2 class="title">Création d'un logo</h2>
         <div class="bloc_pres title">
             <p>
@@ -40,7 +38,17 @@
         <img class="logosM" src="/images/graphisme/groupeM/3logos.svg" alt="Logos Groupe M" >
         <img class="logosM tshirt" src="/images/graphisme/groupeM/carteM.svg" alt="Mockup carte adhérent" >
         <p class="made_w">Fait avec les Logiciel <a class="mail">Photoshop</a> et <a class="mail">Illustrator</a>.</p>
+        <div class="made_w2">
+            <div class="container2">
+            
+                <a href="/html/htmlgraphisme/graphisme.html" class="btn btn-1">
+                <svg>
+                    <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+                </svg>
+                Graphisme
+                </a>
+            </div>
+        </div>
         <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
-
         <script src="/js/header.js"></script>
     </body>
