--- a/html/htmlgraphisme/3covers.html
+++ b/html/htmlgraphisme/3covers.html
@@ -24,7 +24,6 @@
         <balise id="hautdepage"></balise>
         <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
         <div class="espace"></div>
-        <a class="title mail" href="graphisme.html" >Revenir au graphisme</a>
         <h2 class="title">Covers d'albums</h2>
         <p class="bloc_pres title">
             Voici quelques pochettes d'album que j'ai créée.<br>
@@ -63,6 +62,17 @@
         <p class="made_w">
             Réalisé à l'aides des logiciels <a class="mail">Photoshop</a> et <a class="mail">Illustrator</a>.
         </p>
+        <div class="made_w2">
+            <div class="container2">
+            
+                <a href="/html/htmlgraphisme/graphisme.html" class="btn btn-1">
+                <svg>
+                    <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+                </svg>
+                Graphisme
+                </a>
+            </div>
+        </div>
         <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
 
     <script src="/js/header.js"></script>
