--- a/html/htmlwebdesign/1festival.html
+++ b/html/htmlwebdesign/1festival.html
@@ -24,7 +24,6 @@
         <balise id="hautdepage"></balise>
         <iframe class="include fix" src="/html/header.html"  id="navbar" seamless></iframe>
         <div class="espace"></div>
-        <a class="title mail" href="/html/htmlwebdesign/webdesign.html" >Revenir au web design</a>
         <h2 class="title">Cinéma le festival</h2>
         <div class="bloc_pres title">
             <p>
@@ -48,8 +47,18 @@
                 pour une fluidité de l'information quelle que soit le support de l'utilisateur. Les informations sont les mêmes, présentés <a class="mail">ergonomiquement</a>.
             </p>
         </div>
-            <p class="made_w">Codé avec l'interface <a class="mail">Visual Studio code</a>, utilisant les langages <a class="mail">Html</a>, <a class="mail">Css</a></a> et <a class="mail">Java Script</a>.</p>
-            <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
-
-            <script src="/js/header.js"></script>
+        <p class="made_w">Codé avec l'interface <a class="mail">Visual Studio code</a>, utilisant les langages <a class="mail">Html</a>, <a class="mail">Css</a></a> et <a class="mail">Java Script</a>.</p>
+        <div class="made_w2">
+            <div class="container2">
+            
+                <a href="/html/htmlwebdesign/webdesign.html" class="btn btn-1">
+                <svg>
+                    <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+                </svg>
+                Web Design
+                </a>
+            </div>
+        </div>
+        <iframe class="include" src="/html/footer.html"  id="navbar" seamless></iframe>
+        <script src="/js/header.js"></script>
     </body>
