--- a/apropos.html
+++ b/apropos.html
@@ -41,7 +41,7 @@
             </p>
             <!-- <p> Téléchargez mon CV <a class="mail" href="CV_net.pdf" download="CV_Maurine_Cros.pdf">ici</a> </p> -->
             <div class="container2">
-                <a href="/html/htmlwebdesign/webdesign.html" class="btn btn-1">
+                <a href="CV_net.pdf" download="CV_MaurineCros.pdf" class="btn btn-1">
                 <svg>
                     <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                 </svg>
